2006-12-01  Philip Van Hoof <pvanhoof@gnome.org>

	* Support for content-objects in RFC822 messages

	* This was a major API change

2006-11-30  Sergio Villar Senin <svillar@igalia.com>
	* libtinymail-camel/tny-camel-common.c: a store query with no items
	filters nothing

2006-11-30  Philip Van Hoof <pvanhoof@gnome.org>

	* Bugfixes and Maildir implementations for TnyCamelSendQueue
	* Renamed TnyGtkAccountTreeModel to TnyGtkFolderTreeModel and adapted
	the type to accept any TnyFolderStore instance

	* This was a major API change in libtinymailui-gtk

2006-11-28  Philip Van Hoof <pvanhoof@gnome.org>

	* Fixed various locking and error handling problems
	* Fixed support for unread-message count

2006-11-27  Philip Van Hoof <pvanhoof@gnome.org>

	* Added the first pieces for error reporting and support
	* Added error reporting and checking in a lot methods and types
	* Adapted the Python bindings to support error checking

	* This was a major API change in all libraries

2006-11-27  Øystein Gisnås <oystein@gisnas.net>

	* Added an API unit test suite for testing
	  against libraries currently installed on the system

2006-11-26  muppet <scott@asofyet.org>

	* tools/gtypeinterface-h-files-to-c-file.pl: Rewrite and major
	improvements

2006-11-26  Philip Van Hoof <pvanhoof@gnome.org>

	* tools/gtypeinterface-h-files-to-c-file.pl: Initial implementation

2006-11-23  Philip Van Hoof <pvanhoof@gnome.org>

	* The mail-sending API, fine tuning

	* This is a major API change in libtinymail

2006-11-24  Sergio Villar Senin <svillar@igalia.com>

	* libtinymail-camel/tny-camel-folder.c: initilize a CamelException
	* libtinymail-camel/tny.camel-store-account.c: added a folder
	unsubscription before a folder delete

2006-11-23  Thomas Viehmann <tv@beamnet.de>

	* Improvements for the debian package

2006-11-23  Philip Van Hoof <pvanhoof@gnome.org>

	* Major fixes and refactoring for the rfc822 support
	* Reimplemented TnyGtkMsgWindow